// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stake > should render the Stake component 1`] = `
<div
  class="operation"
>
  <div
    class="dusk-wizard"
  >
     
     
     
    <dl
      class="contract-statuses svelte-19157rx"
    >
      <dt
        class="contract-statuses__label svelte-19157rx"
      >
        Spendable
         
      </dt>
      <dd
        class="contract-statuses__value svelte-19157rx"
      >
        <span>
          1,000.000000000
        </span>
         
        <svg
          class="dusk-icon dusk-icon--size--normal contract-statuses__icon"
          data-tooltip-id="main-tooltip"
          data-tooltip-text="DUSK"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
          />
        </svg>
        
         
      </dd>
      <dt
        class="contract-statuses__label svelte-19157rx"
      >
        Total Locked
         
      </dt>
      <dd
        class="contract-statuses__value svelte-19157rx"
      >
        <span>
          278.000000000
        </span>
         
        <svg
          class="dusk-icon dusk-icon--size--normal contract-statuses__icon"
          data-tooltip-id="main-tooltip"
          data-tooltip-text="DUSK"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
          />
        </svg>
        
         
      </dd>
      <dt
        class="contract-statuses__label svelte-19157rx"
      >
        Rewards
         
      </dt>
      <dd
        class="contract-statuses__value svelte-19157rx"
      >
        <span>
          345.000000000
        </span>
         
        <svg
          class="dusk-icon dusk-icon--size--normal contract-statuses__icon"
          data-tooltip-id="main-tooltip"
          data-tooltip-text="DUSK"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
          />
        </svg>
        
         
      </dd>
    </dl>
     
    <div
      class="operation__amount operation__space-between svelte-1i0y9qj"
    >
      <p>
        Enter amount:
      </p>
       
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--small"
        type="button"
      >
        <span
          class="dusk-button__text"
        >
          USE MAX
        </span>
      </button>
    </div>
     
    <div
      class="operation__amount operation__input svelte-1i0y9qj"
    >
      <input
        class="dusk-textbox dusk-textbox-number operation__input-field"
        max="9999.98"
        min="1234"
        required=""
        step="0.000000001"
        type="number"
      />
      
       
      <svg
        class="dusk-icon dusk-icon--size--normal"
        data-tooltip-id="main-tooltip"
        data-tooltip-text="DUSK"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
        />
      </svg>
      
    </div>
     
    <div
      class="gas-settings svelte-1daay07"
    >
      <dl
        class="gas-settings__edit svelte-1daay07"
      >
        <div
          class="gas-fee svelte-x1l5rc"
        >
          <span>
            Max Gas Fee:
          </span>
           
          <div
            class="gas-fee__amount svelte-x1l5rc"
          >
            <span
              class="gas-fee__amount-value svelte-x1l5rc"
            >
              0.020000000
            </span>
             
            <svg
              class="dusk-icon dusk-icon--size--normal dusk-amount__icon"
              data-tooltip-id="main-tooltip"
              data-tooltip-text="DUSK"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
              />
            </svg>
            
          </div>
        </div>
        <dd>
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--small"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              EDIT
            </span>
          </button>
        </dd>
      </dl>
       
    </div>
     
    <div
      class="dusk-wizard__step-navigation"
    >
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal dusk-icon-button--labeled"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--normal dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
          />
        </svg>
        
         
        <span
          class="dusk-button__text"
        >
          Back
        </span>
        
      </button>
      
       
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal dusk-icon-button--labeled"
        type="button"
      >
        <span
          class="dusk-button__text"
        >
          Next
        </span>
         
        <svg
          class="dusk-icon dusk-icon--size--normal dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
          />
        </svg>
        
      </button>
    </div>
    
    
     
    
     
    
  </div>
</div>
`;

exports[`Stake > should render the Stake notice 1`] = `
<div>
  <div
    class="operation"
  >
    <div
      class="dusk-wizard"
    >
       
       
      <span
        class="dusk-badge dusk-badge--variant-warning"
      >
        WARNING
      </span>
       
      <div
        class="dusk-card dusk-card--on-surface"
      >
        <header
          class="dusk-card__header"
        >
          <svg
            class="dusk-icon dusk-icon--size--normal dusk-card__icon"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16"
            />
          </svg>
          
           
          <h3
            class="h4"
          >
            Only stake if you have a node set up!
          </h3>
           
        </header>
         
        <p
          class="staking-warning svelte-1i0y9qj"
        >
          I understand that I have set up a node properly, as described 
          <a
            class="dusk-anchor"
            href="https://docs.dusk.network/getting-started/node-setup/overview"
            rel="noopener noreferrer"
            target="_blank"
          >
            HERE
          </a>
          , and that I will lose funds if I have not done so correctly.
        </p>
         
        <div
          class="dusk-agreement staking-warning__agreement"
        >
          <input
            class="dusk-checkbox"
            id="dusk-checkbox-16"
            name="staking-warning"
            tabindex="0"
            type="checkbox"
          />
           
          <label
            class="dusk-agreement__label"
            for="dusk-checkbox-16"
          >
            Don't show this step again.
          </label>
        </div>
      </div>
      
       
      <div
        class="dusk-wizard__step-navigation"
      >
        <button
          class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal dusk-icon-button--labeled"
          type="button"
        >
          <svg
            class="dusk-icon dusk-icon--size--normal dusk-button__icon"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
            />
          </svg>
          
           
          <span
            class="dusk-button__text"
          >
            Back
          </span>
          
        </button>
        
         
        <button
          class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--normal"
          type="button"
        >
          <span
            class="dusk-button__text"
          >
            Agree
          </span>
        </button>
      </div>
      
      
       
      
       
      
       
      
    </div>
  </div>
</div>
`;

exports[`Stake > should render the review step of the Stake component 1`] = `
<div
  class="operation"
>
  <div
    class="dusk-wizard"
  >
     
    
     
     
     
    <div
      class="operation__stake svelte-1i0y9qj"
      style="animation: __svelte_3516408220_0 400ms linear 0ms 1 both;"
    >
      <dl
        class="contract-statuses svelte-19157rx"
      >
        <dt
          class="contract-statuses__label svelte-19157rx"
        >
          Spendable
           
        </dt>
        <dd
          class="contract-statuses__value svelte-19157rx"
        >
          <span>
            1,000.000000000
          </span>
           
          <svg
            class="dusk-icon dusk-icon--size--normal contract-statuses__icon"
            data-tooltip-id="main-tooltip"
            data-tooltip-text="DUSK"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
           
        </dd>
        <dt
          class="contract-statuses__label svelte-19157rx"
        >
          Total Locked
           
        </dt>
        <dd
          class="contract-statuses__value svelte-19157rx"
        >
          <span>
            278.000000000
          </span>
           
          <svg
            class="dusk-icon dusk-icon--size--normal contract-statuses__icon"
            data-tooltip-id="main-tooltip"
            data-tooltip-text="DUSK"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
           
        </dd>
        <dt
          class="contract-statuses__label svelte-19157rx"
        >
          Rewards
           
        </dt>
        <dd
          class="contract-statuses__value svelte-19157rx"
        >
          <span>
            345.000000000
          </span>
           
          <svg
            class="dusk-icon dusk-icon--size--normal contract-statuses__icon"
            data-tooltip-id="main-tooltip"
            data-tooltip-text="DUSK"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
           
        </dd>
      </dl>
       
      <span
        class="dusk-badge dusk-badge--variant-warning"
      >
        REVIEW TRANSACTION
      </span>
       
      <dl
        class="stake-overview svelte-1uhmq4r"
      >
        <dt
          class="stake-overview__label"
        >
          <svg
            class="dusk-icon dusk-icon--size--normal"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,17L7,12H10V8H14V12H17L12,17M5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3M5,5V19H19V5H5Z"
            />
          </svg>
          
           
          <span>
            Amount
            :
          </span>
           
        </dt>
        <dd
          class="stake-overview__value svelte-1uhmq4r"
        >
          <span
            class="svelte-1uhmq4r"
          >
            1,234.000000000
          </span>
           
          <svg
            class="dusk-icon dusk-icon--size--normal stake-overview__icon"
            data-tooltip-id="main-tooltip"
            data-tooltip-text="DUSK"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
        </dd>
      </dl>
       
      <div
        class="gas-fee svelte-x1l5rc"
      >
        <span>
          Max Gas Fee:
        </span>
         
        <div
          class="gas-fee__amount svelte-x1l5rc"
        >
          <span
            class="gas-fee__amount-value svelte-x1l5rc"
          >
            0.020000000
          </span>
           
          <svg
            class="dusk-icon dusk-icon--size--normal dusk-amount__icon"
            data-tooltip-id="main-tooltip"
            data-tooltip-text="DUSK"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
        </div>
      </div>
    </div>
     
    <div
      class="dusk-wizard__step-navigation"
    >
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal dusk-icon-button--labeled"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--normal dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
          />
        </svg>
        
         
        <span
          class="dusk-button__text"
        >
          Back
        </span>
        
      </button>
      
       
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--normal dusk-icon-button--labeled"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--normal dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 3C7.58 3 4 4.79 4 7V17C4 19.21 7.59 21 12 21S20 19.21 20 17V7C20 4.79 16.42 3 12 3M18 17C18 17.5 15.87 19 12 19S6 17.5 6 17V14.77C7.61 15.55 9.72 16 12 16S16.39 15.55 18 14.77V17M18 12.45C16.7 13.4 14.42 14 12 14C9.58 14 7.3 13.4 6 12.45V9.64C7.47 10.47 9.61 11 12 11C14.39 11 16.53 10.47 18 9.64V12.45M12 9C8.13 9 6 7.5 6 7S8.13 5 12 5C15.87 5 18 6.5 18 7S15.87 9 12 9Z"
          />
        </svg>
        
         
        <span
          class="dusk-button__text"
        >
          Stake
        </span>
        
      </button>
    </div>
    
    
     
    
  </div>
</div>
`;
